lager-lang/examples/bad/wrong_main.lg
string main(int a) {
    return "abc";
}
